 README-with-dummy-physical Locally Added               0 
 null-channelio-with-dummy-physical.awb Locally Added               0 

Directory modules/leap/build-support/build-pipelines/stages/bluespec
 bsv.awb                   Locally Modified          512 

Directory modules/leap/libraries/platform-services/mem-services/scratchpad-memory-service/hybrid
 hybrid-mem-scratch-connector.bsv Locally Modified          512 
 hybrid-mem-scratch.bsv    Locally Modified          512 

Directory modules/leap/libraries/platform-services/mem-services/scratchpad-memory-service
 platform-scratchpad-memory.bsv Locally Modified          512 

Directory modules/leap/libraries/platform-services/starter-service
 starter-service.awb       Locally Modified          512 

Directory modules/leap/libraries/platform-services/front-panel-service
 front-panel-service.awb   Locally Modified          512 

- Add a NULL channel I/O module with a dummy physical channel.  See today's
  leap-multifpga check-in for an explanation.

- Make scratchpad statistics and debug file naming consistent.

----------
mcadler     Date: Mon Jan  6 08:53:17 EST 2014  CSN: CSN-leap-514
                  Mon Jan  6 13:53:17 UTC 2014


Directory modules/leap/libraries/librl/base
 crc.bsv                   Locally Added               0 
 librl-bsv-base.awb        Locally Modified          513 

Add a new CRC generator that takes a CRC width, an input chunk size and a
polynomial.  The generator performs its iterations statically at compile-time
so that the generated run-time code is just a set of XORs.

----------
mcadler     Date: Mon Jan  6 16:36:35 EST 2014  CSN: CSN-leap-515
                  Mon Jan  6 21:36:35 UTC 2014


Directory modules/leap/libraries/librl/base
 crc.bsv                   Locally Modified          514 

New wrapper module mkAutoCRCGen picks the right polynomial for a given CRC
size.  An error is generated when no polynomial is defined for the requested
size.